# Copyright 2026 AlphaOne LLC
# SPDX-License-Identifier: Apache-2.0
#
# v0.7.0.1 — closes #625.
#
# `ai-memory-t0-orchestrate` is the cross-platform Rust replacement
# for the original `scripts/t0-orchestrate.sh` (E1, PR #621). It
# fans the Discovery Gate questions out to four live LLMs and
# scores each response against canonical capabilities-v3
# fragments. Standalone Rust crate — kept out of the published
# `ai-memory` package via the parent `Cargo.toml`'s
# `include = [...]` allowlist (the same allowlist that excludes
# `tools/` from the crates.io upload).
#
# This crate is *not* part of any Cargo workspace on purpose —
# same precedent as `tools/transcript-extractor/` (I5) and
# `tools/auto-link-detector/` (G11). The integration test in
# `tests/e1_orchestration_dry_run.rs` builds it on the fly through
# `cargo build --manifest-path tools/t0-orchestrate/Cargo.toml`,
# behind a `OnceLock` to avoid the parallel-rebuild flake handled
# in PR #623.

[package]
name = "ai-memory-t0-orchestrate"
version = "0.1.0"
edition = "2024"
authors = ["AlphaOne LLC"]
description = "v0.7 E1 cross-platform orchestrator: Discovery Gate questions across 4 frontier LLMs"
license = "Apache-2.0"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[[bin]]
name = "t0-orchestrate"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
# `must_use_candidate` and `missing_errors_doc` fire on every
# small helper in this single-binary crate; suppressed locally to
# keep the orchestrator readable. Production code in the main
# crate keeps the strict pedantic profile.
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
