# Copyright 2026 AlphaOne LLC
# SPDX-License-Identifier: Apache-2.0
#
# v0.7.0 — Track I, task I5 (R5).
#
# Reference implementation of a `pre_store` hook that extracts
# topic-bounded sub-memories from a stored transcript and folds
# them back into the in-flight memory delta. Standalone Rust
# crate — kept out of the published `ai-memory` crate via the
# parent `Cargo.toml`'s `include = [...]` allowlist (the same
# allowlist that excludes `tools/` from the crates.io upload).
#
# This crate is *not* part of the workspace on purpose: G3-G11
# own the in-tree hook pipeline and any change to the production
# code base. The extractor is a reference subprocess that reads
# the same JSON envelope the production executor writes
# (`{"event":"pre_store","payload":{...}}`) and replies with a
# `HookDecision` line — fully decoupled from the daemon, just
# like `tools/auto-link-detector/` will be when G11 lands.

[package]
name = "ai-memory-transcript-extractor"
version = "0.1.0"
edition = "2024"
authors = ["AlphaOne LLC"]
description = "v0.7 R5 reference pre_store hook: topic-bounded transcript-to-memory extraction"
license = "Apache-2.0"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "transcript-extractor"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
# `must_use_candidate` and `missing_errors_doc` fire on every
# small helper in this single-binary crate; suppressed locally to
# keep the reference impl readable. Production hook code in the
# main crate keeps the strict pedantic profile.
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
